[gd_scene load_steps=5 format=3 uid="uid://cfx2xb3yi7vj5"]

[ext_resource type="Script" path="res://pftnf.gd" id="1_l6y4a"]

[sub_resource type="Animation" id="Animation_xsohf"]
length = 0.001

[sub_resource type="Animation" id="Animation_cy3r8"]
resource_name = "get_ready"
length = 5.8
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(5.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"transition"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p31xd"]
_data = {
"RESET": SubResource("Animation_xsohf"),
"get_ready": SubResource("Animation_cy3r8")
}

[node name="Pftnf" type="Node2D" node_paths=PackedStringArray("animation")]
script = ExtResource("1_l6y4a")
animation = NodePath("AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p31xd")
}

[node name="player1" type="Label" parent="."]
offset_left = 320.0
offset_top = 208.0
offset_right = 378.0
offset_bottom = 231.0
text = "player1
"

[node name="player2" type="Label" parent="."]
offset_left = 553.0
offset_top = 208.0
offset_right = 611.0
offset_bottom = 231.0
text = "player2
"

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
